--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,23 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "5.2.*",
-        "symfony/dotenv": "5.2.*",
+        "league/csv": "^9.6",
+        "symfony/browser-kit": "5.*",
+        "symfony/console": "*",
+        "symfony/css-selector": "5.*",
+        "symfony/dom-crawler": "5.*",
+        "symfony/dotenv": "*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.2.*",
-        "symfony/yaml": "5.2.*"
+        "symfony/framework-bundle": "*",
+        "symfony/http-client": "*",
+        "symfony/yaml": "*"
     },
     "require-dev": {
+        "symplify/easy-coding-standard": "dev-master",
+        "rector/rector": "^0.9.18"
     },
     "config": {
         "optimize-autoloader": true,
@@ -55,7 +62,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.2.*"
+            "require": "5.2"
         }
     }
 }
